--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ skin.redreaper.LeanDroidTV/1080i/.DS_Store
 zips/.DS_Store
 zips/skin.redreaper.LeanDroidTV/.DS_Store
 skin.redreaper.LeanDroidTV/resources/.DS_Store
+.DS_Store
